fix: scrollbar back to .5rem

--- a/src/app/style/brand-resources.scss
+++ b/src/app/style/brand-resources.scss
@@ -153,7 +153,7 @@ $secondary-font:            'Noto Sans';
 
 
 @mixin scrollbars(
-  $size: $standardUnit/2,
+  $size: .5rem,
   $foreground-color: rgba(0,0,0,0.25),
   $background-color: rgba(0,0,0,0.15)
 ) {
